--- a/src/Lesson 1.html
+++ b/src/Lesson 1.html
@@ -19,7 +19,7 @@
 <span class="text">Строчный элемент 2</span>
 <h6>Заголовок</h6>
 <p>Lorem ipsum [200]</p>
-<blockquote></blockquote>
+<blockquote>Выделенная цитата</blockquote>
 <pre></pre>
 <strong>Жирный текст</strong>
 <br>
