--- a/src/Lesson2/catalog/catalog.html
+++ b/src/Lesson2/catalog/catalog.html
@@ -5,8 +5,156 @@
     <title>Title</title>
 </head>
 <body>
-<h2 id>News</h2>
-<a href></a>
-<lorem1000
+<h1>Catalog page</h1>
+<div>
+    <a href="../index.html">Link to index page</a>
+</div>
+<div>
+    <a href="#news">Link to news</a>
+</div>
+<h2></h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus adipisci aspernatur, at blanditiis commodi
+    consequuntur culpa cum cumque dolores ea earum error esse harum id ipsa iusto labore laborum magni maxime modi
+    mollitia nihil nisi perspiciatis qui, repellat soluta temporibus vitae! Aperiam architecto commodi consectetur
+    consequuntur cum dolor dolore dolorem doloremque dolorum eaque enim eos ex excepturi fugit harum iure libero maxime
+    minus modi, neque nisi non numquam, perferendis placeat quaerat, quam quos ratione rem repellendus repudiandae rerum
+    sequi sint suscipit voluptate voluptatem voluptates voluptatibus? Accusamus animi asperiores consectetur deleniti,
+    deserunt dolores ducimus eligendi esse, illo incidunt, libero mollitia natus necessitatibus nobis odit pariatur
+    perspiciatis quae quaerat quos repudiandae rerum suscipit voluptate. Amet assumenda cumque dignissimos distinctio
+    dolore dolorem dolores enim et fuga impedit iusto necessitatibus porro provident quibusdam quis repellat soluta,
+    velit voluptatem! Aut dolore est natus quo vero. Assumenda dicta et iste perferendis quae quam quasi sunt. Amet
+    aspernatur autem consectetur consequatur culpa cumque, dolorem doloribus dolorum, ea est ex facere, fuga harum illum
+    inventore laboriosam laudantium libero magnam maiores molestiae non nostrum obcaecati optio pariatur perspiciatis
+    provident qui quibusdam quod repellendus saepe tempora unde velit vero? A aliquid beatae cumque doloremque impedit
+    possimus repellat, repellendus! Aliquam eligendi error inventore iste libero quasi quis ratione totam. Ab ad alias
+    autem dignissimos doloremque dolores error harum itaque libero modi molestias necessitatibus neque, nihil pariatur
+    quia, quidem quisquam reiciendis repellendus reprehenderit repudiandae sit soluta sunt tempore vel velit.
+    Consequatur dolorem ea odio omnis provident repellat similique voluptas? Assumenda autem culpa delectus deleniti
+    eaque error facere fugiat fugit id in iure iusto labore laboriosam libero, maxime, molestias necessitatibus non
+    numquam praesentium quia quibusdam quo ratione reiciendis, repellat saepe similique unde! Earum, esse est explicabo
+    fugiat fugit perferendis quos rem tempore. Ab at consequatur cum dignissimos doloremque dolores doloribus est
+    expedita ipsa iusto labore magnam minima molestias necessitatibus nihil obcaecati possimus quam, saepe sint tempore
+    ullam voluptate voluptatibus. Aut blanditiis consectetur cupiditate dignissimos doloribus eius, enim eveniet fugit
+    illo illum impedit iste itaque labore neque nisi provident, qui quia ratione rem reprehenderit rerum tenetur
+    veritatis vero vitae voluptate? Assumenda distinctio harum perspiciatis. Aut cumque debitis eos error ex expedita
+    hic itaque modi neque non placeat, praesentium quam quasi quis repellendus rerum suscipit ut vero. Corporis dolore
+    ex rerum tempore! Eos id modi molestias, pariatur recusandae repellendus! Accusamus ad adipisci alias assumenda
+    consectetur cumque dicta doloremque dolores earum et excepturi id illum impedit in inventore laborum magni, minima
+    molestiae molestias natus necessitatibus nisi nobis odit officiis perspiciatis, quae qui quibusdam quidem ratione
+    repellendus reprehenderit repudiandae sapiente soluta tempora tenetur totam vero! A commodi debitis hic illum iure,
+    molestiae neque quae quo recusandae ullam voluptas voluptatum. Accusamus esse et excepturi iste minus, tempora
+    tempore. Est neque non numquam officiis qui sapiente sit sunt totam, vitae voluptate. Adipisci amet corporis, culpa
+    deleniti dolor ex expedita explicabo harum illo itaque iusto laudantium minus nostrum nulla odio, omnis optio
+    pariatur perspiciatis placeat quidem quod quos ratione reiciendis repellat repellendus, reprehenderit suscipit
+    tenetur totam unde voluptates? Aut ea inventore maiores nulla numquam, pariatur possimus recusandae soluta
+    temporibus! A accusamus animi at, aut autem consequatur culpa, dignissimos dolore doloremque dolores doloribus
+    ducimus earum explicabo fuga incidunt iure maiores maxime modi molestiae natus non odio odit officia officiis
+    perspiciatis qui quis quos rem sint sit sunt tempore voluptate voluptates. Deserunt fuga incidunt minus perspiciatis
+    praesentium saepe, vel. Ad aliquid amet beatae ea impedit molestiae numquam perspiciatis praesentium reprehenderit,
+    velit. Aliquid assumenda consequatur consequuntur deserunt distinctio, dolor doloremque fugiat, ipsum laboriosam
+    maiores minus natus nobis numquam similique sit. Ad aperiam asperiores aspernatur autem consequatur ex,
+    exercitationem explicabo fugiat hic impedit, itaque libero minus modi omnis pariatur perferendis quos recusandae
+    sequi tempora voluptatem. Accusantium architecto at commodi cum debitis dicta, ea facilis id ipsum maxime modi
+    molestias non placeat qui quibusdam similique, sunt voluptatem voluptatum. Alias amet aperiam, at atque autem beatae
+    cumque doloremque eligendi est eum eveniet id ipsum iusto minima, mollitia natus nobis numquam officia optio
+    praesentium quaerat quis, quisquam quo sapiente totam veritatis voluptate? Commodi, dolore, quasi? Aspernatur
+    blanditiis dolor doloremque error excepturi hic magnam modi obcaecati, porro, quis repellat ullam. Aperiam
+    consequuntur, cumque deserunt, exercitationem expedita iste, iusto laudantium magnam nam nihil perferendis repellat
+    soluta velit voluptatem voluptatum? Accusamus animi blanditiis doloremque omnis porro quae quasi voluptatum! Aut
+    commodi cupiditate deserunt doloremque eius est et fugiat necessitatibus perferendis, quam quas tenetur voluptatem
+    voluptates? Alias architecto beatae distinctio eius error fuga iste molestiae molestias officia omnis praesentium
+    quia repellendus sunt suscipit tempora tenetur velit, voluptatum. Alias animi architecto, consequuntur culpa debitis
+    deleniti dicta distinctio dolores doloribus ducimus earum eligendi enim eos eum ex exercitationem facere id impedit
+    incidunt iste iure maxime minima minus modi natus nemo nostrum quam quos ratione saepe sapiente sed sequi soluta
+    sunt ut voluptates voluptatum! Distinctio doloremque enim harum laudantium nemo neque, sint? Ad autem explicabo, in
+    mollitia nemo nisi odit omnis praesentium quidem saepe! Aut autem beatae dignissimos dolor explicabo illo impedit
+    iste maxime necessitatibus sed. A accusamus, alias aperiam aspernatur aut blanditiis consequuntur corporis cum
+    dignissimos dolor dolores eaque error est et fugiat hic illum iure laboriosam magni maiores maxime minima nam
+    nesciunt nisi numquam odit pariatur quasi quia quidem quisquam quos ratione sit temporibus unde voluptas voluptate
+    voluptatibus. Amet architecto, asperiores cupiditate eligendi ex harum, molestiae, officiis quasi quos rerum sed
+    sint vero voluptatem. Accusamus alias animi asperiores at autem commodi corporis cupiditate dolor eaque, earum, eos
+    esse exercitationem explicabo harum hic illum labore magnam minus modi necessitatibus nesciunt nihil nostrum officia
+    pariatur quaerat quas qui quibusdam quis quod recusandae reiciendis reprehenderit sapiente sit suscipit veritatis
+    vitae voluptatem. Accusamus accusantium ad adipisci aut commodi, corporis dolorem dolores ea eius eos eum explicabo
+    facilis fugiat harum iste libero maiores modi natus non obcaecati odit praesentium quas qui reiciendis rem,
+    temporibus ullam velit. Dolores eum fugiat harum ipsa obcaecati porro quas unde ut voluptatem, voluptatibus.
+    Consequuntur deserunt eligendi eos fuga fugit illo, minus molestias optio possimus provident quam, rem similique
+    voluptas. Amet aspernatur explicabo, inventore labore laborum, magni mollitia obcaecati saepe veniam, voluptatem
+    voluptatibus.</p>
+<h2 id="news">News</h2>
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusamus alias asperiores autem, distinctio dolorum
+    eum eveniet, illum, iure magnam necessitatibus nemo nulla rerum sed velit vero voluptate? At eos, facilis iste
+    laudantium minus numquam odit quasi velit! Animi harum, laudantium nemo sapiente soluta ut. Accusantium alias
+    assumenda, aut beatae corporis culpa cupiditate dicta doloribus earum eius error eum fuga illum impedit maiores
+    maxime modi necessitatibus nemo nesciunt nisi obcaecati porro possimus provident quia quidem rem repellat rerum
+    saepe sunt ut velit veniam voluptas voluptates! Asperiores beatae deserunt dolor dolorem ea, enim esse ex in itaque
+    necessitatibus placeat qui quo repellendus repudiandae suscipit totam ut vel, voluptate voluptates voluptatum?
+    Aliquid aperiam aspernatur consequuntur, est, excepturi, harum laboriosam maiores minima odit omnis rem
+    voluptatibus! Corporis et minima quas quia sed temporibus tenetur veniam? Accusamus aut dignissimos eaque eligendi
+    eveniet illum iusto, laborum minima nihil nulla pariatur, qui quidem saepe sapiente sequi. Adipisci animi
+    consectetur eius labore nobis. Cum debitis doloremque, expedita explicabo facere labore natus quas, quia quo
+    reiciendis sapiente, sequi totam voluptatem? Aliquid fugiat minima nisi officia velit? Amet beatae esse labore
+    magnam nostrum quae quas ullam? Ab accusantium aliquam animi aspernatur beatae dolorem, dolorum ex facere hic in
+    ipsa, ipsam iste libero maiores nam natus necessitatibus neque numquam omnis placeat provident, quis repellat sit
+    veritatis vero voluptas voluptatem. Architecto commodi dolor earum, laboriosam molestiae quaerat quam quos ratione,
+    saepe sint ullam velit? Ab accusantium deserunt eligendi eveniet excepturi facilis fugiat ipsa laboriosam magni nam
+    neque, nesciunt, odit perspiciatis placeat possimus praesentium, quasi sequi sint tenetur voluptatum? Ad architecto
+    at, cumque et fugit in ipsum labore magnam maxime necessitatibus officia officiis optio quam quas qui repellendus
+    saepe similique tempora, totam veritatis? A ad aspernatur at commodi consequatur cum dolorem doloremque dolores
+    doloribus earum eius expedita, facere harum impedit ipsa iste itaque iusto laborum magnam minima minus modi
+    molestias mollitia natus omnis perspiciatis provident quae quas quis ratione recusandae saepe sequi sint totam
+    veritatis vero vitae? Aliquid culpa dignissimos distinctio ducimus eius impedit incidunt molestiae repellat tempora
+    totam. At consequuntur debitis dolores ipsum labore, magni maxime nihil rem saepe sequi. Dolores fugiat incidunt
+    ipsum molestias nesciunt quas soluta velit! Animi architecto assumenda consectetur corporis deserunt dolores ducimus
+    eveniet excepturi harum in ipsam ipsum itaque iure labore, molestias necessitatibus neque nihil nisi odit officiis
+    optio pariatur perferendis perspiciatis praesentium quas, quasi, rem repellendus saepe sunt tempore unde veniam vero
+    voluptates? Magnam, magni praesentium reprehenderit sit velit vero? Autem cupiditate dolorem doloremque id incidunt
+    maiores nisi numquam quidem quisquam sapiente! Accusamus accusantium animi blanditiis earum error, excepturi fugiat
+    laboriosam nisi officia omnis perferendis repellat ullam ut veniam vero. Asperiores libero maiores omnis pariatur
+    possimus quibusdam sit, tempora velit. Asperiores autem corporis dolorum error nemo quia quidem quod reprehenderit
+    saepe voluptate? Laudantium minus mollitia natus nisi, quia quo quos recusandae repudiandae sed vitae! Accusamus
+    aliquam cumque cupiditate dicta dignissimos dolor dolorum ea error, eum facilis fugit, in iste iusto laudantium
+    minima mollitia nemo non odit optio praesentium quidem ratione rem similique veniam voluptatibus! Aliquam aut dicta
+    doloribus facilis nobis nulla similique voluptatum. Accusamus aperiam consectetur, corporis cumque dolor doloremque
+    eveniet iure minima minus natus nemo odio provident quasi qui quibusdam quidem recusandae rerum veniam voluptates
+    voluptatibus. Adipisci aperiam architecto asperiores at consequatur culpa cumque doloremque eligendi eveniet ex,
+    expedita iste labore, laboriosam laborum nam officiis qui, quibusdam temporibus veritatis voluptates. Accusantium,
+    aperiam consectetur dolor iusto nemo pariatur rerum saepe velit veniam voluptatem? Aut iure laboriosam laborum
+    officiis voluptates. Amet consequuntur culpa cum, dolore est ipsam molestiae nulla quas, quia quisquam quo
+    reiciendis similique voluptas? Corporis culpa distinctio ex itaque maiores nesciunt perferendis repudiandae
+    temporibus unde? Alias autem cum deleniti dignissimos earum nihil omnis perferendis quia totam voluptatum! Aliquam
+    assumenda consectetur dicta, iste iure maiores pariatur possimus repellendus rerum saepe sed tenetur vel! Ab,
+    accusamus adipisci culpa doloremque fugiat illum inventore itaque nihil nulla possimus saepe ut vitae voluptate?
+    Aliquid consequuntur dolores, maxime minima minus nobis perferendis quam quis quo recusandae reiciendis sint?
+    Aliquam at doloribus dolorum expedita harum non, quam quis unde? Atque corporis cum dolorem eligendi enim est eum
+    ipsam, laborum minima minus, nostrum optio quisquam sequi tempore ullam unde vel. Alias, cumque debitis dolor
+    doloribus est id illum incidunt natus numquam officiis placeat porro praesentium rem rerum, sequi totam veniam,
+    vitae voluptas voluptates voluptatum. Architecto corporis eligendi ipsa nobis recusandae vitae! Architecto
+    aspernatur beatae cumque, dicta, dignissimos dolore est eum excepturi fugiat harum inventore libero molestiae nam
+    necessitatibus odit officia perferendis placeat quaerat quis reiciendis repudiandae sit veniam veritatis. Ad
+    assumenda atque culpa cum debitis dolore, eius eveniet impedit libero nesciunt nobis provident quas quasi ratione
+    rem, repellendus reprehenderit saepe? Commodi debitis dolores eos error excepturi exercitationem impedit
+    necessitatibus nulla perspiciatis, quia reiciendis suscipit totam veritatis voluptates voluptatibus! Ad aliquid
+    amet, esse iure maiores nobis quas quos reiciendis ullam. A accusamus adipisci alias animi, assumenda beatae debitis
+    dicta dolor, explicabo itaque minima modi nam nesciunt nisi porro praesentium sed sequi totam vitae voluptates!
+    Aspernatur corporis dolor doloremque ex expedita itaque magnam, nesciunt nostrum quasi unde. Ad adipisci amet dicta,
+    dignissimos dolore eaque et laborum nesciunt perferendis qui quisquam repudiandae voluptate. Asperiores aut autem
+    commodi cupiditate dignissimos dolorem eius eligendi expedita explicabo, hic maiores nam neque nisi optio
+    perferendis quasi quibusdam, repellat reprehenderit, similique sint! Culpa eligendi, minima modi officia soluta ut.
+    Aspernatur culpa debitis, eveniet, ex exercitationem explicabo molestiae nemo obcaecati quos repellendus ullam ut
+    vero voluptatum. Asperiores et incidunt minima quod! A doloribus labore quibusdam quis tenetur! Expedita quas,
+    voluptatem. Accusantium aliquid culpa distinctio, ducimus ex excepturi explicabo fugit hic illo libero quae
+    quibusdam reprehenderit, veniam! Ad alias aut consequuntur expedita itaque iusto labore magnam maxime molestiae
+    neque rerum, similique soluta tempora voluptates voluptatum! Ab aperiam autem beatae culpa ducimus eius eligendi
+    explicabo fugiat laborum libero maiores minima molestiae, nam neque nesciunt nostrum officiis perferendis placeat
+    qui soluta sunt tempora ut voluptates. Doloribus dolorum, ea enim explicabo facere ipsa itaque non officiis
+    praesentium quaerat quam quasi quo, sint. Animi consequuntur cumque, delectus fugit hic laborum magnam, quas
+    ratione, velit voluptate voluptatibus!
+</p>
+<!--h1 {Catalog page}-->
+<!--<h2 id>News</h2>-->
+<!--<a href></a>-->
+<!--<lorem1000-->
 </body>
 </html>
