--- a/src/Lesson2/index.html
+++ b/src/Lesson2/index.html
@@ -2,31 +2,56 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Lesson2</title>
     <!--    <style>-->
     <!--        p {-->
     <!--            color: red;-->
     <!--        }-->
     <!--    </style>-->
-    <link rel="stylesheet" href="css/style.css">
+    <!--    <link rel="stylesheet" href="css/style.css">-->
 </head>
 <body>
 <h1>Index page</h1>
-<a href="catalog/catalog.html#news">Link to news</a>
+<div>
+    <a href="catalog/catalog.html">Link to catalog page</a>
+</div>
+<div>
+    <a href="https://www.yandex.ru" target="_blank">Link to yandex</a>
+</div>
+<div>
+    <a href="catalog/catalog.html#news">Link to news catalog</a>
+</div>
 <div>
     <a href="mailto:savoook@mail.ru">savoook@mail.ru</a>
 </div>
-
 <div>
-    <a href="tel:6868">+7</a>
+    <a href="tel:+7 916 709 80 84">+7 916 709 80 84</a>
 </div>
-
-<a href="https://www.yandex.ru">
-    <img src="https://www.1zoom.ru/big2/49/253361-Sepik.jpg" alt="error" width="400">
+<a href="https://www.google.com">
+    <img src="https://www.1zoom.ru/big2/49/253361-Sepik.jpg" alt="kotik" width="400">
 </a>
-
-<p class="text">Lorem200</p>
-<p>Lorem200
+<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad alias aliquam amet commodi earum excepturi
+    id porro quae repellat voluptatum? Aliquam, consectetur dignissimos ex odit quam quia similique? Ab alias aliquid
+    assumenda, commodi culpa eius eveniet id ipsa iste modi perspiciatis provident quas quis sapiente, sed sit vero
+    voluptatum. Autem consequatur culpa deleniti, est eum incidunt iste iusto laboriosam minima molestias odit officiis
+    provident quaerat qui saepe suscipit ullam! Ad, dolorem inventore iure quae quas quo rem? Aperiam atque quos
+    similique unde vero. Accusantium animi aperiam aspernatur consequuntur eius expedita molestias nihil veritatis.
+    Alias beatae eius minus modi nemo numquam possimus quo? A ab adipisci aliquam beatae debitis deserunt dicta
+    dignissimos dolor dolorum ducimus error et excepturi fuga fugit illo inventore ipsum maiores molestiae
+    necessitatibus nisi odio, officia possimus recusandae, rem repudiandae rerum saepe vel voluptas voluptate,
+    voluptates! Consectetur culpa dolores eaque error eum impedit laborum libero maiores nam officia officiis omnis
+    porro praesentium quae ratione repudiandae, saepe tempore veritatis vero voluptatibus. Ad adipisci amet animi
+    asperiores aut autem consequuntur debitis, deleniti dolorem doloremque explicabo fuga fugiat in laudantium magnam
+    natus nostrum officiis optio perspiciatis placeat porro provident quaerat quam qui repellat, repellendus temporibus
+    tenetur totam ullam velit voluptate voluptatum!
+</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam beatae deserunt, distinctio est eum qui voluptatem.
+    Ad blanditiis exercitationem expedita harum illum itaque laboriosam nobis obcaecati perspiciatis, quos repudiandae,
+    soluta? Animi aut autem blanditiis cupiditate excepturi, hic iusto minima mollitia odio optio pariatur quas quasi
+    qui quia repellat sapiente sequi. Facere inventore, neque odit provident quam quas? Amet dolor fugiat itaque, natus
+    nesciunt nobis quaerat quis recusandae soluta. Accusamus consequatur deleniti explicabo fugiat in iure iusto
+    laboriosam, non omnis porro quas quasi, ratione sint tempora vitae voluptas voluptatibus. Aut consectetur deserunt
+    dicta ducimus illum impedit nostrum reprehenderit rerum similique velit?
     <span>1111111
         <strong class="text">555555</strong>
     </span>
@@ -40,7 +65,7 @@
     </span>
 
 <h2>Heading
-<span>Heading span</span>
+    <span>Heading span</span>
 </h2>
 </body>
 </html>
