--- a/src/Lesson2/index.html
+++ b/src/Lesson2/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Lesson2</title>
-    <!--    <style>-->
-    <!--        p {-->
-    <!--            color: red;-->
-    <!--        }-->
-    <!--    </style>-->
-    <!--    <link rel="stylesheet" href="css/style.css">-->
+<!--    <style>-->
+<!--        p {-->
+<!--            color: red;-->
+<!--        }-->
+<!--    </style>-->
+        <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Index page</h1>
@@ -58,7 +58,6 @@
 </p>
 <p>Lorem200</p>
 <div class="box"></div>
-<span>
 <span>
 <span>text</span>
 </span>
