--- a/src/Domashka/сurriculum_vitae.html
+++ b/src/Domashka/сurriculum_vitae.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <title>Резюме Савина Павла Андреевича</title>
     <link rel="stylesheet" href="settings.css">
+    <link href="https://fonts.googleapis.com/css?family=Marck+Script&display=swap&subset=cyrillic" rel="stylesheet">
 </head>
-<body background="http://www.alexpdesigns.com/images/background.jpg" >
+<body background="http://www.alexpdesigns.com/images/background.jpg">
 <h1 class="title" id="title_black">Савин Павел Андреевич</h1>
 <div id="statya">
-    <img src="https://img2.freepng.ru/20180620/cav/kisspng-programmer-computer-programming-source-code-clip-a-computer-programmers-5b2a7e653655e3.8227635915295115252226.jpg"
+    <img src="https://pp.userapi.com/c622621/v622621147/4383a/vkklIvuCLZc.jpg"
          alt="Текст...">
 </div>
 <blockquote>
@@ -23,115 +24,159 @@
     <a href="mailto:pavsav1987@gmail.com">pavsav1987@gmail.com</a>
 </blockquote>
 <hr>
-<h2 class="title">Должность</h2>
+<!--<input>-->
+<!--<input>-->
 <div>
-<pre>
-    Главный специалист службы учета электрической энергииРедактировать                                      <u>110 000 руб.</u>
-    Производство
-    Машиностроение
-    Электроэнергетика
-    <em>Занятость:</em> стажировка, частичная занятость, полная занятость
-    <em>График работы:</em> полный день
-</pre>
+    <h2 class="title">Должность</h2>
+    <span>Главный специалист службы учета электрической энергии</span>
+    <span class="sparava"><u>110 000 руб.</u></span>
+    <li>Производство</li>
+    <li>Машиностроение</li>
+    <li>Электроэнергетика</li>
+    <span class="category">Занятость:</span>
+    <span>полная занятость</span>
+    <br>
+    <span class="category">График работы:</span>
+    <span>полный день</span>
 </div>
-<h2 class="title">Опыт</h2>
 <div>
-<pre>
-    Март 2015 — по настоящее время
-4 года 5 месяцев
-    <em>АО "Московская областная энергосетевая компания"</em>
-Московская область, www.mosoblenergo.ru/
-
-Энергетика
-    -Передача, распределение электроэнергии
-
- <em>Главный специалист отдела балансов</em>
--сопровождение Договора оказания услуг по передаче электрической энергии.
--ведение базы данных по отпуску электроэнергии в сеть АО «Мособлэнерго» по каждой точке приема ежемесячно.
--анализ схем электроснабжения по каждой территории, внесение схем по новым территориям и внесение изменений в схемы по существующим территориям в базу данных программного комплекса РТП3.
--расчет нормативов технологических потерь электроэнергии с использованием программного комплекса РТП3 на регулируемый период для утверждения в МинЭнерго РФ. Оформление результатов расчетов и взаимодействие с экспертной организацией.
--расчет технологических потерь электроэнергии для оформления АРБП при установке приборов учета не на границе балансовой принадлежности.
--подготовка, оформление и внесение изменений в «Соглашение об информационном обмене» со смежными сетевыми организациями.
-
-    Август 2012 — март 2015
-2 года 8 месяцев
- <em>АО "Московская областная энергосетевая компания"</em>
-Россия, www.mosoblenergo.ru/
-
-Энергетика
-    -Передача, распределение электроэнергии
-
- <em>Ведущий специалист отдела балансов</em>
-- формирование плановых и фактических балансов электрической энергии и мощности.
-- согласование плановых отпуска в сеть и полезного отпуска с ДЗО, ССО и ПАО «Мосэнергосбыт» в рамках тарифной компании.
-- создание отчетных форм для Комитета по ценам и тарифам Московской области и Федеральной службе по тарифам России.
-- сбор информации о балансе электроэнергии по перспективным сетям МО по запросу корпоративной службы.
-- подготовка информационных писем и приемка протоколов замеров в зимний и летний режимные дни.
-
-    Сентябрь 2011 — август 2012
-1 год
- <em>АО "Московская областная энергосетевая компания"</em>
-Московская область, www.mosoblenergo.ru/
-
-Энергетика
-    -Передача, распределение электроэнергии
-
- <em>Специалист отдела учета</em>
-- оформление и инвентаризация актов разграничения балансовой принадлежности и их согласование со смежными сетевыми организациями и ПАО «Мосэнергосбыт»
-- обследование электросетевого хозяйства, предлагаемого в собственность (аренду)
-
-    Сентябрь 2009 — сентябрь 2011
-2 года 1 месяц
- <em>ОАО "Авиационная корпорация "Рубин"</em>
-Московская область, www.akrubin.ru/index.html
-
-Тяжелое машиностроение
-    -Продукция авиационной, аэрокосмической, вертолетной промышленности (монтаж, сервис, ремонт)
-
- <em>Инженер-конструктор</em>
-- внесение изменений в существующую конструкцию агрегатов
-- разработка 3D-моделей, сборок, чертежей и спецификаций для насосных агрегатов
-- контроль производственного процесса
-- рассмотрение дефектных ведомостей
-- проведение испытаний
-- подготовка макетов насосных агрегатов для выставок
-</pre>
+    <h2 class="title">Опыт</h2>
+    <div>
+        <span class="sparava">Март 2015 — по настоящее время</span>
+        <span>АО "Московская областная энергосетевая компания"</span>
+        <br>
+        <span class="sparava">4 года 5 месяцев</span>
+        <span>Московская область, <a href="www.mosoblenergo.ru">www.mosoblenergo.ru</a></span>
+        <br>
+        <span>Энергетика</span>
+        <li>Передача, распределение электроэнергии</li>
+        <br>
+        <span class="category">Главный специалист отдела балансов</span>
+        <li>сопровождение Договора оказания услуг по передаче электрической энергии</li>
+        <li>ведение базы данных по отпуску электроэнергии в сеть АО «Мособлэнерго» по каждой точке приема ежемесячно
+        </li>
+        <li>анализ схем электроснабжения по каждой территории, внесение схем по новым территориям и внесение изменений в
+            схемы
+            по существующим территориям в базу данных программного комплекса РТП3
+        </li>
+        <li>расчет нормативов технологических потерь электроэнергии с использованием программного комплекса РТП3 на
+            регулируемый период для утверждения в МинЭнерго РФ. Оформление результатов расчетов и взаимодействие с
+            экспертной
+            организацией
+        </li>
+        <li>расчет технологических потерь электроэнергии для оформления АРБП при установке приборов учета не на границе
+            балансовой принадлежности
+        </li>
+        <li>подготовка, оформление и внесение изменений в «Соглашение об информационном обмене» со смежными сетевыми
+            организациями
+        </li>
+    </div>
+    <br>
+    <hr>
+    <div>
+        <span class="sparava">Август 2012 — март 2015</span>
+        <span>АО "Московская областная энергосетевая компания"</span>
+        <br>
+        <span class="sparava">2 года 8 месяцев</span>
+        <span>Россия, <a href="www.mosoblenergo.ru">www.mosoblenergo.ru</a></span>
+        <br>
+        <span>Энергетика</span>
+        <li>Передача, распределение электроэнергии</li>
+        <br>
+        <span class="category">Ведущий специалист отдела балансов</span>
+        <li>формирование плановых и фактических балансов электрической энергии и мощности</li>
+        <li>согласование плановых отпуска в сеть и полезного отпуска с ДЗО, ССО и ПАО «Мосэнергосбыт» в рамках
+            тарифной
+            компании
+        </li>
+        <li>создание отчетных форм для Комитета по ценам и тарифам Московской области и Федеральной службе по
+            тарифам
+            России
+        </li>
+        <li>сбор информации о балансе электроэнергии по перспективным сетям МО по запросу корпоративной службы</li>
+        <li>подготовка информационных писем и приемка протоколов замеров в зимний и летний режимные дни</li>
+    </div>
+    <br>
+    <hr>
+    <div>
+        <span class="sparava">Сентябрь 2011 — август 2012</span>
+        <span>АО "Московская областная энергосетевая компания"</span>
+        <br>
+        <span class="sparava"> 1 год</span>
+        <span>Московская область, <a href="www.mosoblenergo.ru">www.mosoblenergo.ru</a></span>
+        <br>
+        <span>Энергетика</span>
+        <li>Передача, распределение электроэнергии</li>
+        <br>
+        <span class="category">Специалист отдела учета</span>
+        <li>оформление и инвентаризация актов разграничения балансовой принадлежности и их согласование со смежными
+            сетевыми
+        </li>
+        организациями и ПАО «Мосэнергосбыт»
+        <li>обследование электросетевого хозяйства, предлагаемого в собственность (аренду)</li>
+    </div>
+    <br>
+    <hr>
+    <div>
+        <span class="sparava">Сентябрь 2009 — сентябрь 2011</span>
+        <span>ОАО "Авиационная корпорация "Рубин"</span>
+        <br>
+        <span class="sparava">2 года 1 месяц</span>
+        <span> Московская область, <a href="www.akrubin.ru">www.akrubin.ru</a></span>
+        <br>
+        <span>Тяжелое машиностроение</span>
+        <li>Продукция авиационной, аэрокосмической, вертолетной промышленности (монтаж, сервис, ремонт)</li>
+        <br>
+        <span class="category">Инженер-конструктор</span>
+        <li>внесение изменений в существующую конструкцию агрегатов</li>
+        <li>разработка 3D-моделей, сборок, чертежей и спецификаций для насосных агрегатов</li>
+        <li>контроль производственного процесса</li>
+        <li>рассмотрение дефектных ведомостей</li>
+        <li>проведение испытаний</li>
+        <li>подготовка макетов насосных агрегатов для выставок</li>
+    </div>
 </div>
-<h2 class="title">Ключевые навыки</h2>
 <div>
-<pre>
-    - Windows, MS Office, Internet - опытный пользователь
-- знание программ AutoCAD, MathCAD, Компас, РТП-3
-</pre>
+    <h2 class="title">Ключевые навыки</h2>
+    <div>
+        <span>Windows, MS Office, Internet - опытный пользователь</span>
+        <br>
+        <span>знание программ AutoCAD, MathCAD, Компас, РТП-3</span>
+    </div>
 </div>
-<h2 class="title">Обо мне</h2>
 <div>
-<pre>
-классный парень
-</pre>
+    <h2 class="title">Обо мне</h2>
+    <div>
+        <span>классный парень</span>
+    </div>
 </div>
-<h2 class="title">Высшее образование</h2>
 <div>
-<pre>
-    2010
- <em>Московский энергетический институт (Национальный исследовательский университет)</em>, Москва
-Гидравлические машины, гидроприводы и гидропневмоавтоматика, Инженер
-</pre>
+    <h2 class="title">Высшее образование</h2>
+    <div>
+        <span>2010</span>
+        <br>
+        <span>Московский энергетический институт (Национальный исследовательский университет), Москва</span>
+        <br>
+        <span>Гидравлические машины, гидроприводы и гидропневмоавтоматика, Инженер</span>
+    </div>
 </div>
-<h2 class="title">Знание языков</h2>
 <div>
-<pre>
-    Русский — Родной
-Английский — B1 — Средний
-</pre>
+    <h2 class="title">Знание языков</h2>
+    <div>
+        <span>Русский — Родной</span>
+        <br>
+        <span>Английский — B1 — Средний</span>
+    </div>
+</div>
+<div>
+    <h2 class="title">Гражданство, время в пути</h2>
+    <div>
+        <span class="category">Гражданство: </span><span>Россия</span>
+        <br>
+        <span class="category">Разрешение на работу: </span><span>Россия</span>
+        <br>
+        <span class="category">Желательное время в пути до работы: </span><span>не более часа</span>
+    </div>
 </div>
 </body>
-<h2 class="title">Гражданство, время в пути</h2>
-<div>
-<pre>
-    <em>Гражданство:</em> Россия
- <em>Разрешение на работу:</em> Россия
- <em>Желательное время в пути до работы:</em> не более часа
-</pre>
-</div>
 </html>
