--- a/src/Lesson3/index.html
+++ b/src/Lesson3/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600i, 800&display=swap&subset=cyrillic"
+          rel="stylesheet">
 </head>
 <body>
 <div>div</div>
@@ -40,7 +42,7 @@
 <a href="http//yandex.ru">link</a>
 <a href="http//yandex.ru">link</a>
 <a href="http//yandex.ru">link</a>
-<ul>
+<!--<ul>-->
     <li>li text</li>
     <li>li text</li>
     <li>li text</li>
