--- a/src/Domashka2/norway.html
+++ b/src/Domashka2/norway.html
@@ -6,8 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-<h1>Norway</h1>
-<body>
+<h1>Norway</h1><body>
 <div class="box">
     <!--    <div>-->
     <a href="oslo.html">Oslo</a>
