--- a/src/Lesson6/index.html
+++ b/src/Lesson6/index.html
@@ -8,13 +8,22 @@
 <body>
 
 <form action="http://echo.htmlacademy.ru" autocomplete="off" method="post">
+
     <fieldset>
         <legend>Учётка</legend>
         <label for="login">логин</label>
-        <input type="text" id="login" name="login">
+        <input type="text" id="login" name="login" required>
         <label for="password">пароль</label>
-        <input type="password" id="password" name="password">
+        <input type="password" id="password" name="password" required>
+        <label for="email">Email</label>
+        <input type="email" id="email">
+        <input type="date">
+        <input type="file">
+        <input type="number">
+        <input type="search">
+        <input type="range" min="1" max="10" step="1" value="2">
     </fieldset>
+
     <fieldset>
         <legend>Опции</legend>
         <label for="green">Зелёный</label>
@@ -24,6 +33,7 @@
         <label for="blue">Синий</label>
         <input type="checkbox" id="blue" name="color" value="blue">
     </fieldset>
+
     <fieldset>
         <legend>Радио станция</legend>
         <label for="bbc">BBC</label>
@@ -33,16 +43,45 @@
         <label for="relax">Релакс</label>
         <input type="radio" name="radio station" value="3" id="relax">
     </fieldset>
-<fieldset>
-    <legend>Еда</legend>
-    <select name="food" id="">
-        <option value="1">Ветчина</option>
-        <option value="2">Сыр</option>
-        <option value="3">Яцйо</option>
-    </select>
-</fieldset>
+
+    <fieldset>
+        <legend>Еда</legend>
+        <select name="food" id="">
+            <optgroup label="Закуски">
+                <option value="1">Ветчина</option>
+                <option value="2">Сыр</option>
+                <option value="3">Яцйо</option>
+            </optgroup>
+            <optgroup label="Горячее">
+                <option value="1">Свинина</option>
+                <option value="2">Рыба</option>
+                <option value="3">Овощи</option>
+            </optgroup>
+        </select>
+
+        <select multiple name="food" id="">
+            <optgroup label="Закуски">
+                <option value="1">Ветчина</option>
+                <option value="2">Сыр</option>
+                <option value="3">Яцйо</option>
+            </optgroup>
+            <optgroup label="Горячее">
+                <option value="1">Свинина</option>
+                <option value="2">Рыба</option>
+                <option value="3">Овощи</option>
+            </optgroup>
+        </select>
+    </fieldset>
+
+    <fieldset>
+        <legend>Комментарий</legend>
+        <textarea name="comment" id="comment" cols="30" rows="10">
+
+        </textarea>
+    </fieldset>
+
     <input type="submit">
-    <input type="reset">\
+    <input type="reset">
     <input type="hidden" name="cost" value="100">
 
     <button>Button</button>
